bk_ida/gobmkida/c2/findlib
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1870:27: error: use of undeclared identifier 'dword_A7D19C'
if ( !byte_9B389F[v10] && dword_A7D19C[v10] != v7 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1870:7: error: use of undeclared identifier 'byte_9B389F'
if ( !byte_9B389F[v10] && dword_A7D19C[v10] != v7 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1874:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[v10] = v7; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1878:7: error: use of undeclared identifier 'byte_9B388C'
if ( !byte_9B388C[v10] && string_number[v10 + 384] != v7 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1948:18: error: expected expression
v25 = *( _OWORD *)( v23 + 4 * v22 - 96); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1948:10: error: use of undeclared identifier '_OWORD'
v25 = *( _OWORD *)( v23 + 4 * v22 - 96); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1949:12: error: expected expression
*( _OWORD *)&libs[v22] = *( _OWORD *)( v23 + 4 * v22 - 112); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1949:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22] = *( _OWORD *)( v23 + 4 * v22 - 112); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1949:37: error: expected expression
*( _OWORD *)&libs[v22] = *( _OWORD *)( v23 + 4 * v22 - 112); 
                                    ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1949:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22] = *( _OWORD *)( v23 + 4 * v22 - 112); 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1950:12: error: expected expression
*( _OWORD *)&libs[v22 + 4] = v25; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1950:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 4] = v25; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1951:18: error: expected expression
v26 = *( _OWORD *)( v23 + 4 * v22 - 64); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1951:10: error: use of undeclared identifier '_OWORD'
v26 = *( _OWORD *)( v23 + 4 * v22 - 64); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1952:12: error: expected expression
*( _OWORD *)&libs[v22 + 8] = *( _OWORD *)( v23 + 4 * v22 - 80); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1952:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 8] = *( _OWORD *)( v23 + 4 * v22 - 80); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1952:41: error: expected expression
*( _OWORD *)&libs[v22 + 8] = *( _OWORD *)( v23 + 4 * v22 - 80); 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1952:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 8] = *( _OWORD *)( v23 + 4 * v22 - 80); 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1953:12: error: expected expression
*( _OWORD *)&libs[v22 + 12] = v26; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1953:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 12] = v26; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1954:18: error: expected expression
v27 = *( _OWORD *)( v23 + 4 * v22 - 32); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1954:10: error: use of undeclared identifier '_OWORD'
v27 = *( _OWORD *)( v23 + 4 * v22 - 32); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1955:12: error: expected expression
*( _OWORD *)&libs[v22 + 16] = *( _OWORD *)( v23 + 4 * v22 - 48); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1955:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 16] = *( _OWORD *)( v23 + 4 * v22 - 48); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1955:42: error: expected expression
*( _OWORD *)&libs[v22 + 16] = *( _OWORD *)( v23 + 4 * v22 - 48); 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1955:34: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 16] = *( _OWORD *)( v23 + 4 * v22 - 48); 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1956:12: error: expected expression
*( _OWORD *)&libs[v22 + 20] = v27; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1956:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 20] = v27; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1957:18: error: expected expression
v28 = *( _OWORD *)( v23 + 4 * v22); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1957:10: error: use of undeclared identifier '_OWORD'
v28 = *( _OWORD *)( v23 + 4 * v22); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1958:12: error: expected expression
*( _OWORD *)&libs[v22 + 24] = *( _OWORD *)( v23 + 4 * v22 - 16); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1958:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 24] = *( _OWORD *)( v23 + 4 * v22 - 16); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1958:42: error: expected expression
*( _OWORD *)&libs[v22 + 24] = *( _OWORD *)( v23 + 4 * v22 - 16); 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1958:34: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 24] = *( _OWORD *)( v23 + 4 * v22 - 16); 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1959:12: error: expected expression
*( _OWORD *)&libs[v22 + 28] = v28; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1959:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs[v22 + 28] = v28; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1977:18: error: expected expression
v33 = *( _OWORD *)( v30 + v32 * 4); 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1977:10: error: use of undeclared identifier '_OWORD'
v33 = *( _OWORD *)( v30 + v32 * 4); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1978:12: error: expected expression
*( _OWORD *)&v29[v32 - 4] = *( _OWORD *)( v30 + v32 * 4 - 16); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1978:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v29[v32 - 4] = *( _OWORD *)( v30 + v32 * 4 - 16); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1978:40: error: expected expression
*( _OWORD *)&v29[v32 - 4] = *( _OWORD *)( v30 + v32 * 4 - 16); 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1978:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v29[v32 - 4] = *( _OWORD *)( v30 + v32 * 4 - 16); 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1979:12: error: expected expression
*( _OWORD *)&v29[v32] = v33; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/engine/board.c:1979:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v29[v32] = v33; 
   ^
44 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/findlib/src/obj/1/board.o] Error 1
